--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ function showPitchIntro2() {
         That was high! Now let’s try one that goes lower.<br><br>
         Listen closely as Melody takes another trip!
       </p>
-      <audio id="pitchSlow1Narration" src="PT_SLOW1_NARRATION.mp3"></audio>
+      <audio id="pitchSlow1Narration" src="PT_LOW1_NARRATION.mp3"></audio>
     </div>
   `);
 
@@ -475,8 +475,9 @@ function showPitchInstructions() {
     updateScreen(`
       <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
         <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
-          Great job! Now it's your turn.<br><br>
+          Great! Now it's your turn.<br><br>
           After each clip, decide whether the music got <strong>higher</strong>, <strong>lower</strong>, or stayed <strong>the same</strong>!<br>
+          When you hear the music, listen closely and click your answer. <br><br>
           Let’s begin!
         </p>
         <audio id="pitchInstructions" src="PT_PITCH_INSTRUCTIONS.mp3"></audio>
