--- a/index.html
+++ b/index.html
@@ -445,25 +445,25 @@ function showPitchIntro2() {
         That was high! Now let’s try one that goes lower.<br><br>
         Listen closely as Melody takes another trip!
       </p>
-      <audio id="pitchSlow1Narration" src="PT_SLOW1_NARRATION.mp3"></audio>
+      <audio id="pitchLow1Narration" src="PT_LOW1_NARRATION.mp3"></audio>
     </div>
   `);
 
-  const narration = document.getElementById("pitchSlow1Narration");
+  const narration = document.getElementById("pitchLow1Narration");
   narration.play().then(() => {
-    narration.onended = playPitchSlow1;
+    narration.onended = playPitchLow1;
   }).catch(() => {
-    playPitchSlow1();
+    playPitchLow1();
   });
 }
 
-function playPitchSlow1() {
+function playPitchLow1() {
   updateScreen(`
     <video id="pitchSlow1" width="100%" height="100%" playsinline style="background:black;">
-      <source src="PT_SLOW1.mp4" type="video/mp4" />
+      <source src="PT_LOW1.mp4" type="video/mp4" />
     </video>
   `);
-  const video = document.getElementById("pitchSlow1");
+  const video = document.getElementById("pitchLow1");
   video.play().catch(e => console.warn("Video play failed:", e));
   video.onended = showPitchInstructions;
 }
