--- a/index.html
+++ b/index.html
@@ -403,155 +403,6 @@ function showTempoResponseScreen(correctAnswer, callback) {
   });
 }
 
-function runPitchDemo() {
-  const demoTrials = [
-    { narration: "PT_HIGH1_NARRATION.mp3", video: "PT_HIGH1.mp4" },
-    { narration: "PT_LOW1_NARRATION.mp3", video: "PT_LOW1.mp4" }
-  ];
-  let i = 0;
-
-  function nextDemo() {
-    if (i >= demoTrials.length) {
-      runPitchPractice(); // → next: feedback trials
-      return;
-    }
-
-    const trial = demoTrials[i++];
-    updateScreen(`
-      <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;">
-        <p style="font-size:1.5em;text-align:center;max-width:800px;">Listen carefully to this example!</p>
-        <audio id="demoNarration" src="${trial.narration}"></audio>
-      </div>
-    `);
-
-    const audio = document.getElementById("demoNarration");
-    audio.play().then(() => {
-      audio.onended = () => playPitchDemoVideo(trial.video, nextDemo);
-    }).catch(() => playPitchDemoVideo(trial.video, nextDemo));
-  }
-
-  nextDemo();
-}
-
-function playPitchDemoVideo(videoFile, callback) {
-  updateScreen(`
-    <video id="demoVideo" width="100%" height="100%" playsinline style="background:black;">
-      <source src="${videoFile}" type="video/mp4" />
-    </video>
-  `);
-  const video = document.getElementById("demoVideo");
-  video.play().catch(() => {});
-  video.onended = callback;
-}
-function runPitchPractice() {
-  const pitchPracticeTrials = [
-    { video: "PT_HIGH2.mp4", correct: "high" },
-    { video: "PT_LOW2.mp4", correct: "low" }
-  ];
-  let i = 0;
-
-  function nextPractice() {
-    if (i >= pitchPracticeTrials.length) {
-      showPitchInstructions(); // → then instructions page
-      return;
-    }
-    const trial = pitchPracticeTrials[i++];
-    playPitchPracticeVideo(trial.video, trial.correct, nextPractice);
-  }
-
-  nextPractice();
-}
-function playPitchPracticeVideo(videoFile, correctAnswer, callback) {
-  updateScreen(`
-    <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:#f0e6f9;">
-      <video id="practiceVideo" playsinline autoplay style="width:100%; height:100%; object-fit:contain; background:#f0e6f9;">
-        <source src="${videoFile}" type="video/mp4">
-      </video>
-    </div>
-  `);
-
-  const video = document.getElementById("practiceVideo");
-  video.onended = () => {
-    showPitchResponseScreen(correctAnswer, callback);
-  };
-  video.play().catch(err => {
-    console.warn("Autoplay issue or play failed:", err);
-    showPitchResponseScreen(correctAnswer, callback);
-  });
-}
-function showPitchResponseScreen(correctAnswer, callback) {
-  updateScreen(`
-<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;
-    background: url('/mnt/data/0372e1b1-84c0-4ecf-9841-fbaf1a4be76c.png') center/cover no-repeat;
-    padding: 20px;">
-      <h1 style="color: #4b2e83; margin-top: 30px;">How did the pitch sound?</h1>
-      <div style="display: flex; gap: 40px; margin-top: 20px;">
-        <button class="tempo-btn" data-choice="high" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">High</button>
-        <button class="tempo-btn" data-choice="low" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Low</button>
-        <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Same</button>
-      </div>
-      <audio id="correctSound" src="correct_feedback.mp3"></audio>
-      <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
-      <div id="feedback" style="margin-top: 20px; font-size: 1.2em; color: red;"></div>
-    </div>
-  `);
-
-  const buttons = document.querySelectorAll('.tempo-btn');
-  let answered = false;
-
-  buttons.forEach(btn => {
-    btn.addEventListener('click', () => {
-      if (answered) return;
-      answered = true;
-      const choice = btn.getAttribute('data-choice');
-      buttons.forEach(b => b.disabled = true);
-
-      if (choice === correctAnswer) {
-        document.getElementById("feedback").style.color = "green";
-        document.getElementById("feedback").innerText = "Correct!";
-        document.getElementById("correctSound").play().catch(() => {});
-        setTimeout(callback, 1500);
-      } else {
-        document.getElementById("feedback").style.color = "red";
-        document.getElementById("feedback").innerText = "Oops! Try again.";
-        document.getElementById("wrongSound").play().catch(() => {});
-        setTimeout(() => {
-          answered = false;
-          buttons.forEach(b => b.disabled = false);
-        }, 2000);
-      }
-    });
-  });
-}
-function showPitchInstructions() {
-  setTimeout(() => {
-    updateScreen(`
-      <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
-        <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
-          Great! Now it's your turn!<br><br>
-          After each clip, decide whether the pitch got <strong>higher</strong>, <strong>lower</strong>, or stayed <strong>the same</strong>! <br>
-          When you're ready, we'll start the real trials!
-        </p>
-        <audio id="pitchInstructions" src="PITCH_INSTRUCTIONS.mp3"></audio>
-      </div>
-    `);
-
-    const audio = document.getElementById("pitchInstructions");
-    audio.play().then(() => {
-      audio.onended = () => setTimeout(() => {
-        currentBlockIndex = 1; // pitch block
-        trialCounter = 1;
-        startRealTrials();
-      }, 1000);
-    }).catch(err => {
-      console.warn("Autoplay issue:", err);
-      currentBlockIndex = 1;
-      trialCounter = 1;
-      startRealTrials();
-    });
-  }, 1500);
-}
-
 /* REAL TRIALS */
 
 function showRealTrialsIntro() {
@@ -783,32 +634,26 @@ function handleResponse(choice) {
     correct_answer:correctAnswer,
     reaction_time_sec:parseFloat(reactionTimeSec.toFixed(3))
   };
-fetch("https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify(entry)
-})
-.then(() => {
-  trialCounter++;
-  if (trialCounter > TRIALS_PER_BLOCK) {
-    trialCounter = 1;
-    currentBlockIndex++;
-  }
-
-  if (currentBlockIndex >= BLOCK_ORDER.length) {
-    updateScreen(`<h1>Thank you for participating! All trials complete.</h1>`);
-  } else if (BLOCK_ORDER[currentBlockIndex] === "pitch") {
-    runPitchDemo(); // start pitch practice before pitch trials
-  } else {
-    rebuildBaseHTML();
-updatePlayButton();
-  }
-})
-.catch(() => {
-  alert("Failed to record response.");
-  responseSubmitted = false;
-});
-} 
+  fetch("https://api.backendless.com/04D99C8B-3B22-454C-889B-5E66A5798C47/38037288-90E3-4F8A-87D6-E052FCD03D67/data/responses", {
+    method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(entry)
+  })
+  .then(()=>{
+    trialCounter++;
+    if(trialCounter>TRIALS_PER_BLOCK){
+      trialCounter=1; currentBlockIndex++;
+    }
+    if(currentBlockIndex>=BLOCK_ORDER.length){
+      updateScreen(`<h1>Thank you for participating! All trials complete.</h1>`);
+    }else{
+      rebuildBaseHTML();
+      updatePlayButton(BLOCK_ORDER[currentBlockIndex]);
+    }
+  })
+  .catch(()=>{
+    alert("Failed to record response.");
+    responseSubmitted = false;
+  });
+}
 function rebuildBaseHTML() {
   updateScreen("");
   document.getElementById("trialControls").innerHTML="";
@@ -819,5 +664,4 @@ setupVisualElements();
 </script>
 </body>
 </html>
-
 
