--- a/index.html
+++ b/index.html
@@ -747,31 +747,30 @@ async function playTrial() {
     showAutoplayOverlay(audio, updateVisuals);
   }
 }
+
   
 function showResponseOptions() {
-updateScreen(`
-  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px;">
-    <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
-    <p style="max-width:600px;font-size:1.1em;margin-bottom:30px;">
-      Now that the music is over, think back to how it sounded before and after the pause.<br><br>
-      If the music stayed the same, choose the <strong>normal</strong> elevator.<br>
-      If the music changed after the pause, choose the <strong>magical</strong> elevator.
-    </p>
-    <div style="display:flex;justify-content:center;gap:80px;">
-      <div style="text-align:center;">
-        <img src="normal.jpg" class="elevator-option" id="normalElevator" alt="Normal Elevator" style="width:300px;">
-        <div style="margin-top:12px;font-weight:bold;">Normal Elevator</div>
+  updateScreen(`
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px;">
+      <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
+      <p style="max-width:600px;font-size:1.1em;margin-bottom:30px;">
+        Now that the music is over, think back to how it sounded before and after the pause.<br><br>
+        If the music stayed the same, choose the <strong>normal</strong> elevator.<br>
+        If the music changed after the pause, choose the <strong>magical</strong> elevator.
+      </p>
+      <div style="display:flex;justify-content:center;gap:80px;">
+        <div style="text-align:center;">
+          <img src="normal.jpg" class="elevator-option" id="normalElevator" alt="Normal Elevator" style="width:300px;">
+          <div style="margin-top:12px;font-weight:bold;">Normal Elevator</div>
+        </div>
+        <div style="text-align:center;">
+          <img src="magical.png" class="elevator-option" id="magicalElevator" alt="Magical Elevator" style="width:300px;">
+          <div style="margin-top:12px;font-weight:bold;">Magical Elevator</div>
+        </div>
       </div>
-      <div style="text-align:center;">
-        <img src="magical.png" class="elevator-option" id="magicalElevator" alt="Magical Elevator" style="width:300px;">
-        <div style="margin-top:12px;font-weight:bold;">Magical Elevator</div>
-      </div>
-    </div>
-  </div>
-`);
-
+    </div>`);
   document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
-document.getElementById("magicalElevator").addEventListener("click", () => handleResponse("magical"), { once: true });
+  document.getElementById("magicalElevator").addEventListener("click", () => handleResponse("magical"), { once: true });
 }
 function handleResponse(choice) {
   if (responseSubmitted) return;
@@ -782,7 +781,7 @@ function handleResponse(choice) {
 
   const reactionTimeSec = (performance.now() - trialStartTime) / 1000;
   const isNormal = /_gap(\.mp3)?$/.test(currentAudioFile);
-const correctAnswer = isNormal ? "normal" : "magical";
+  const correctAnswer = isNormal ? "normal" : "magical";
 
   const entry = {
     participant: participantID,
@@ -832,6 +831,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
