--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <script>
 const TRIALS_PER_BLOCK=2;
 const BLOCK_ORDER=["tempo","pitch"];
-const BLOCK_FILES={tempo:"tempo_trials.csv",pitch:"pitch_trials.csv"};
+const BLOCK_FILES = { tempo: "csv/tempo_trials.csv", pitch: "csv/pitch_trials.csv" };
 
 let pitchPracticeCompleted = false;
 
