--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@ function updateScreen(html,background=null){
 
 async function loadCSVData(blockType) {
   const response = await fetch(BLOCK_FILES[blockType]);
+  if (!response.ok) {
+    throw new Error(`HTTP ${response.status}`);
+  }
   const text = await response.text();
   const lines = text.trim().split('\n').slice(1);
   const parsed = lines.map(line => line.split(','));
@@ -686,10 +689,11 @@ async function playTrial() {
   const gapSec = parseFloat(gap);
   const testSec = parseFloat(test);
 
-  const audio = document.getElementById("myAudio");
+   const audio = document.getElementById("myAudio");
   audio.src = filename;
+  audio.load();
   currentAudioFile = filename;
-
+  
   const [v1, vGap, v2] = visuals.filter(v => v.el.tagName === "VIDEO").map(v => v.el);
 
   // Wait for all videos to have metadata loaded
@@ -832,8 +836,8 @@ function handleResponse(choice) {
     } else if (BLOCK_ORDER[currentBlockIndex] === "pitch" && !pitchPracticeCompleted) {
       runPitchDemo(); // Only run pitch practice the first time
     } else {
-      rebuildBaseHTML();
-      updatePlayButton(BLOCK_ORDER[currentBlockIndex]);
+     rebuildBaseHTML();
+      updatePlayButton();
     }
   })
   .catch(() => {
